# sample-multiagent-orchestration-on-agentcore-for-education

./: .env.example  .gitignore  Agentcore_Demo-Art_of_Possible.drawio  CONTRIBUTING.md  Makefile  NOTICE  README.md  deploy_agentcore_gateway.py  deploy_agentcore_memory.py  deploy_agentcore_runtime_with_gw.py  deploy_cognito_user_pool.py  deploy_knowledge_base.py  lambda_function.py  pyproject.toml
scripts/: cleanup.sh  deploy.sh
src/agents/: educational_assistant_agent.py  financial_assistant_agent.py  general_questions_agent.py  mock_data_generator.py  orchestrator_agentcore_runtime_gateway.py  teacher_assistant_agent.py  virtual_secretary_agent.py
src/agents/models/: __init__.py  core.py
src/lambda_sns_eum/: lambda_sns_handler.py  update_lambda_env.sh
tests/: invoke_agent.py  invoke_agent_strands.py  test_tool.py
utils/knowledge_base_docs/: arts_art_history.txt  arts_color_theory.txt  arts_digital_art.txt  arts_printmaking.txt  arts_sculpture_techniques.txt  biology_cell_structure.txt  biology_ecology.txt  biology_evolution.txt  biology_genetics_dna.txt  biology_photosynthesis.txt  chemistry_atomic_structure.txt  chemistry_chemical_bonding.txt  chemistry_chemical_kinetics.txt  chemistry_organic_chemistry.txt  chemistry_thermochemistry.txt  computer science_algorithms_data_structures.txt  computer science_artificial_intelligence.txt  computer science_database_systems.txt  computer science_programming_paradigms.txt  computer science_software_engineering.txt  english_creative_writing.txt  english_grammar_syntax.txt  english_linguistics.txt  english_reading_comprehension.txt  english_rhetoric_composition.txt  geography_climate_systems.txt  geography_human_migration.txt  geography_natural_resources.txt  geography_plate_tectonics.txt  geography_urban_geography.txt  history_ancient_civilizations.txt  history_cold_war.txt  history_industrial_revolution.txt  history_renaissance.txt  history_world_war_ii.txt  literature_dramatic_literature.txt  literature_literary_analysis.txt  literature_narrative_structure.txt  literature_poetry_forms.txt  literature_world_literature.txt  (+20 more)
