[project]
name = "octank-edu-multi-agent"
version = "2.0.0"
description = "Multi-agent educational system with WhatsApp integration, Knowledge Base, and persona-based access control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AWS Solutions Architecture Team", email = "aws-sa@amazon.com"}
]
maintainers = [
    {name = "AWS Solutions Architecture Team", email = "aws-sa@amazon.com"}
]
keywords = [
    "ai", "agents", "bedrock", "agentcore", "whatsapp", "education", 
    "multi-agent", "aws", "cognito", "lambda", "knowledge-base"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.11"
dependencies = [
    # Core AWS and AgentCore dependencies
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    
    # Strands framework (Agents as Tools)
    "strands>=0.1.0",
    "strands_tools>=0.1.0",
    
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    
    # HTTP client and utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "retrying>=1.3.4",
    
    # OpenSearch (for knowledge base integration)
    "opensearch-py>=2.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    
    # Code quality and formatting
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    
    # Development utilities
    "ipython>=8.29.0",
    "jupyter>=1.0.0",
]

deployment = [
    # Additional deployment dependencies
    "docker>=6.0.0",
    "awscli>=1.32.0",
]

docs = [
    # Documentation generation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

all = [
    "octank-edu-multi-agent[dev,deployment,docs]"
]

[project.urls]
Homepage = "https://github.com/aws-samples/octank-edu-multi-agent"
Documentation = "https://github.com/aws-samples/octank-edu-multi-agent/blob/main/README.md"
Repository = "https://github.com/aws-samples/octank-edu-multi-agent"
Issues = "https://github.com/aws-samples/octank-edu-multi-agent/issues"

[project.scripts]
octank-deploy = "scripts.deploy:main"
octank-cleanup = "scripts.cleanup:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "aws: marks tests that require AWS credentials",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "C901", # too-complex
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG001", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "bedrock_agentcore.*",
    "strands.*",
    "mcp.*",
    "opensearch.*",
]
ignore_missing_imports = true
